--- a/views/teacher/list.html
+++ b/views/teacher/list.html
@@ -24,7 +24,7 @@
                     <li class="active">讲师列表</li>
                 </ol>
                 <div class="page-title">
-                    <a href="./teacher_add.html" class="btn btn-success btn-sm pull-right">添加讲师</a>
+                    <a href="/teacher/add" class="btn btn-success btn-sm pull-right">添加讲师</a>
                 </div>
                 <div class="panel panel-default">
                     <div class="panel-body">
@@ -72,61 +72,56 @@
             </div>
         </div>
     </div>
+    <!-- 模板 -->
     <script type="text/template" id="modalTpl">
-    <table class="table table-bordered table-condensed">
-        <tbody>
-            <tr>
-                <th>姓名:</th>
-                <td>{{tc_name}}</td>
-                <th>职位:</th>
-                <td colspan="3">讲师</td>
-                <td rowspan="4" width="128">
-                    <div class="avatar">
-                        {{if tc_avatat}}
-                        <img src="{{tc_avatat}}" alt="">
-                        {{else}}
-                        <img src="/public/images/default.png">
-                        {{/if}}
-                    </div>
-                </td>
-            </tr>
-            <tr>
-                <th>花名:</th>
-                <td>{{tc_roster}}</td>
-                <th>出生日期</th>
-                <td colspan="3">{{tc_birthday}}</td>
-            </tr>
-            <tr>
-                <th>性别:</th>
-                <td>
-                    {{if tc_gender==0}}
-                    男
-                    {{else}}
-                    女
-                    {{/if}}
-                </td>
-                <th>入职日期:</th>
-                <td colspan="3">{{tc_join_date}}</td>
-            </tr>
-            <tr>
-                <th>手机号码:</th>
-                <td colspan="2">{{tc_cellphone}}</td>
-                <th>邮箱:</th>
-                <td colspan="2">{{tc_email}}</td>
-            </tr>
-            <tr>
-                <th>籍贯:</th>
-                <td colspan="6">{{tc-hometown}}</td>
-            </tr>
-            <tr>
-                <td colspan="7">
-                    <div class="introduce">
-                        <p>{{@ tc_introduce}}</p>
-                    </div>
-                </td>
-            </tr>
-        </tbody>
-    </table>
+        <table class="table table-bordered table-condensed">
+            <tbody>
+                <tr>
+                    <th>姓名:</th>
+                    <td>{{tc_name}}</td>
+                    <th>职位:</th>
+                    <td colspan="3">讲师</td>
+                    <td rowspan="4" width="128">
+                        <div class="avatar">
+                            {{if tc_avatat}}
+                            <img src="{{tc_avatat}}" alt=""> {{else}}
+                            <img src="/public/images/default.png"> {{/if}}
+                        </div>
+                    </td>
+                </tr>
+                <tr>
+                    <th>花名:</th>
+                    <td>{{tc_roster}}</td>
+                    <th>出生日期</th>
+                    <td colspan="3">{{tc_birthday}}</td>
+                </tr>
+                <tr>
+                    <th>性别:</th>
+                    <td>
+                        {{if tc_gender==0}} 男 {{else}} 女 {{/if}}
+                    </td>
+                    <th>入职日期:</th>
+                    <td colspan="3">{{tc_join_date}}</td>
+                </tr>
+                <tr>
+                    <th>手机号码:</th>
+                    <td colspan="2">{{tc_cellphone}}</td>
+                    <th>邮箱:</th>
+                    <td colspan="2">{{tc_email}}</td>
+                </tr>
+                <tr>
+                    <th>籍贯:</th>
+                    <td colspan="6">{{tc_hometown}}</td>
+                </tr>
+                <tr>
+                    <td colspan="7">
+                        <div class="introduce">
+                            <p>{{@ tc_introduce}}</p>
+                        </div>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
     </script>
     <script type="text/html" id="teacherTpl">
         {{each list}}
@@ -136,16 +131,12 @@
             <td>{{$value.tc_roster}}</td>
             <td>{{$value.tc_join_date}}</td>
             <td>
-                {{if $value.tc_gender==1}}
-                男
-                {{else}}
-                女
-                {{/if}}
+                {{if $value.tc_gender==1}} 男 {{else}} 女 {{/if}}
             </td>
             <td>{{$value.tc_cellphone}}</td>
             <td data-tcId='{{$value.tc_id}}' data-status={{$value.tc_status}}>
                 <a href="#teacherModal" class="btn btn-info btn-xs preview">查 看</a>
-                <a href="./teacher_add.html" class="btn btn-info btn-xs">编 辑</a>
+                <a href="/teacher/add?tc_id={{$value.tc_id}}" class="btn btn-info btn-xs">编 辑</a>
                 <a href="javascript:;" class="btn btn-warning btn-xs eod">
                     {{if $value.tc_status == 0}}
                     注销
